--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "newquery/hf-php-client",
     "description": "PHP Client for hackforums.net API",
     "type": "library",
+    "license": "MIT",
     "require": {
         "guzzlehttp/guzzle": "^6.3",
         "ext-json": "*"
